[package]
name = "ecoord"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for transforming between 3D coordinate frames."

[features]

[dependencies]
ecoord-core = { version = "0.0.2-alpha.1", path = "../ecoord-core" }
ecoord-transform = { version = "0.0.2-alpha.1", path = "../ecoord-transform" }
ecoord-io = { version = "0.0.2-alpha.1", path = "../ecoord-io" }
